# harvest

./: .gitignore  Cargo.toml  Makefile  README.md  archive_slim.py  auto_visualize_all.bash  default.nix  parse_trace.py  run_examples.sh  rust-toolchain.toml  shell.nix  trace_c.txt  trace_k.txt  visualize_all.py
.github/workflows/: ci.yaml
agent_runner/: Cargo.toml
agent_runner/src/: lib.rs
agent_tools/: c_sandbox.md  c_sandbox.py  callgraph.md  callgraph.py  symbol_diff.md  symbol_diff.py  symscan.md  symscan.py  unifdef.md
agent_tools_embed/: Cargo.toml
agent_tools_embed/src/: lib.rs
benchmark/: Cargo.toml
benchmark/src/: cargo_utils.rs  cli.rs  io.rs  ir_utils.rs  lib.rs  main.rs  runner.rs  stats.rs
core/: Cargo.toml  build.rs
core/src/: cargo_utils.rs  cmake_presets.rs  config.rs  id.rs  ir.rs  lib.rs  llm.rs  test_util.rs  tools.rs  utils.rs
core/src/diagnostics/: mod.rs  tests.rs  tool_reporter.rs
core/src/fs/: freezer.rs  mod.rs
core/src/fs/dir/: mod.rs  tests.rs
core/src/fs/file/: mod.rs  tests.rs
doc/: AddingTools.md  Benchmark.md  Configuration.md
fix/: Cargo.toml
fix/src/: cli.rs  main.rs
fs/: Cargo.toml
fs/src/: dir.rs  file.rs  lib.rs
infer/: default.nix
ir/src/: c2rust_c_ast.rs  hc_ast.rs  lib.rs  raw_source.rs
nightly/: rust-toolchain.toml
scripts/: kiro-translate.sh
scripts/prompts/: executable.md  library.md
tools/agentic/: Cargo.toml
tools/auto_fix/: Cargo.toml
tools/build_c_artifact/: Cargo.toml
tools/build_c_library/: Cargo.toml
tools/build_config/: Cargo.toml
tools/build_config/src/: build_rs.rs  ir.rs  lib.rs  prompt_ext.rs  scanner.rs
tools/build_config/tests/: scanner.rs
tools/build_config/tests/fixtures/config_notests/: CMakeLists.txt  configuration.json
tools/build_config/tests/fixtures/config_notests/src/: backend_alpha.c  main.c
tools/build_config/tests/fixtures/config_tests/: CMakeLists.txt
tools/build_config/tests/fixtures/config_tests/include/: params.h
tools/build_config/tests/fixtures/config_tests/src/: backend.h  backend_beta.c  extra.c  extra.h  main.c
tools/build_config/tests/fixtures/noconfig/: CMakeLists.txt
tools/build_project_spec/: Cargo.toml
tools/build_project_spec/src/: build_analyzer_llm.rs  lib.rs
tools/build_project_spec/src/prompts/: structured_schema.json  system_prompt.txt
tools/c_ast/: Cargo.toml
tools/c_ast/src/: annotations.rs  ast.rs  lib.rs  rsm.rs  utils.rs
tools/c_ast/tests/: parse_to_ast.rs
tools/clippy_lint/: Cargo.toml
tools/compilation_unit_to_rust_llm/: Cargo.toml
tools/compilation_unit_to_rust_llm/src/: lib.rs  system_prompt.txt
tools/conform_agentic/: Cargo.toml
tools/diagnostic_attributor/: Cargo.toml
tools/emit_build_features/: Cargo.toml
tools/emit_build_features/src/: lib.rs
tools/emit_build_features/tests/: golden.rs
tools/emit_build_features/tests/fixtures/example_p02/: Cargo.toml  build.rs
tools/exec_runner/: Cargo.toml
tools/fix_build_check/: Cargo.toml
tools/fix_declarations_llm/: Cargo.toml
tools/fix_declarations_llm/src/: attribution.rs  fix_llm.rs  interface_ctx.rs  lib.rs  patches.rs
tools/fix_declarations_llm/src/prompts/fix/: structured_schema.json  system_prompt.txt
tools/fix_diff_failures/: Cargo.toml
tools/generate_difftest_suite/: Cargo.toml
tools/generate_exec_difftests/: Cargo.toml
tools/generate_test_suite/: Cargo.toml
tools/identify_project_kind/: Cargo.toml
tools/infer_analysis/: Cargo.toml
tools/load_raw_source/: Cargo.toml
tools/modular_fix_llm/: Cargo.toml  algorithm.md
tools/modular_fix_llm/src/: compiler.rs  error_classifier.rs  fix_llm.rs  history.rs  lib.rs  repair_state.rs  splitter.rs
tools/modular_fix_llm/src/prompts/fix/: user_prompt.txt
tools/modular_translation_llm/: Cargo.toml
tools/modular_translation_llm/src/: clang.rs  lib.rs  recombine.rs  structured_schema.json  system_prompt.txt  translation.rs  translation_llm.rs  utils.rs
tools/modular_translation_llm/src/prompts/cargo_toml/: structured_schema.json  system_prompt.txt
tools/modular_translation_llm/src/prompts/func_translation/: structured_schema.json  system_prompt.txt
tools/modular_translation_llm/src/prompts/function_signatures/: system_prompt.txt
tools/modular_translation_llm/src/prompts/interface/: structured_schema.json  system_prompt.txt
tools/modular_translation_llm/src/prompts/macros/: structured_schema.json  system_prompt.txt
tools/modular_translation_llm/src/prompts/type_translation/: structured_schema.json  system_prompt.txt
tools/normalize_cargo/: Cargo.toml
tools/quantize_rust_spans/: Cargo.toml
tools/quantize_rust_spans/src/: lib.rs
tools/raw_source_to_cargo_llm/: Cargo.toml
tools/raw_source_to_cargo_llm/src/: lib.rs  system_prompt_executable.txt  system_prompt_library.txt
tools/run_difftest/: Cargo.toml
tools/run_exec_difftest/: Cargo.toml
tools/run_exec_difftest/src/: lib.rs
tools/split_and_format/: Cargo.toml
tools/split_and_format/src/: lib.rs
tools/translate_agentic/: Cargo.toml
tools/translate_agentic/src/: lib.rs  prompt_claude_translate.md  prompt_claude_translate_no_plan.md  prompt_configurable.md  prompt_executable.md  prompt_kiro_configurable.md  prompt_kiro_executable.md  prompt_kiro_library.md  prompt_library.md  prompt_translate.md  prompt_translate_no_plan.md  prompt_translate_no_plan_file.md
tools/try_cargo_build/: Cargo.toml
tools/try_cargo_build/src/: lib.rs
tools/verify_fix_agentic/: Cargo.toml
tools/verify_fix_agentic/src/verify_env_template/: CMakeLists.txt  README.md  build.sh  build_fuzz.sh  harvest_diff.h  rust_lib.h  verification_tests.cc
tools/verify_fix_agentic/src/verify_env_template/docs/: NOTICE.md
tools/write_output/: Cargo.toml
translate/: Cargo.toml  default_config.toml
translate/src/: cli.rs  lib.rs  main.rs  runner.rs  scheduler.rs  test_util.rs
translate/src/diagnostics/: mod.rs
translate/src/tools/: identify_project_kind.rs  load_raw_source.rs  mod.rs  try_cargo_build.rs
translate/src/tools/raw_source_to_cargo_llm/: mod.rs  system_prompt_executable.txt  system_prompt_library.txt
(+67 files in other folders)
