[workspace]
members = ["benchmark", "core", "tools/full_source", "tools/build_project_spec", "tools/load_raw_source", "tools/raw_source_to_cargo_llm", "tools/try_cargo_build", "tools/write_output", "translate", "tools/c_ast", "tools/modular_translation_llm", "tools/quantize_rust_spans", "tools/fix_declarations_llm", "tools/translate_agentic", "tools/verify_fix_agentic", "tools/generate_test_suite", "tools/generate_difftest_suite", "tools/build_c_library", "tools/run_difftest"]
resolver = "3"

[workspace.dependencies]
clap = { version = "4.5.45", features = ["derive"] }
harvest_core = { path = "core" }
harvest_translate = { path = "translate" }
full_source = { path = "tools/full_source" }
build_project_spec = { path = "tools/build_project_spec" }
load_raw_source = { path = "tools/load_raw_source" }
raw_source_to_cargo_llm = { path = "tools/raw_source_to_cargo_llm" }
try_cargo_build = { path = "tools/try_cargo_build" }
write_output = { path = "tools/write_output" }
c_ast = { path = "tools/c_ast" }
modular_translation_llm = { path = "tools/modular_translation_llm" }
quantize_rust_spans = { path = "tools/quantize_rust_spans" }
fix_declarations_llm = { path = "tools/fix_declarations_llm" }
translate_agentic = { path = "tools/translate_agentic" }
verify_fix_agentic = { path = "tools/verify_fix_agentic" }
generate_test_suite = { path = "tools/generate_test_suite" }
generate_difftest_suite = { path = "tools/generate_difftest_suite" }
build_c_library = { path = "tools/build_c_library" }
run_difftest = { path = "tools/run_difftest" }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml_edit = "0.23.9"
tracing = { default-features = false, features = ["std"], version = "0.1.44" }

[workspace.lints.clippy]
self_named_module_files = "warn"
