[package]
name = "harvest_core"
version = "0.1.0"
edition = "2024"

[dependencies]
llm = { default-features = false, features = ["ollama", "openai", "openrouter", "rustls-tls"], version = "1.3.4", optional = true }
serde_json.workspace = true
thiserror = { workspace = true }
tokio = { version = "1.48.0", optional = true }
tracing-subscriber = { features = ["env-filter"], version = "0.3.22" }
tracing = { default-features = false, features = ["std"], version = "0.1.43" }
tempfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
llm-support = ["llm", "tokio"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
