[package]
name = "harvest_core"
version = "0.1.0"
edition = "2024"

[dependencies]
toml_edit = { workspace = true }
serde_json.workspace = true
thiserror = { workspace = true }
tracing-subscriber = { features = ["env-filter"], version = "0.3.22" }
tracing.workspace = true
tempfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = "1.49.0"
llm = { default-features = false, features = ["ollama", "openai", "openrouter", "rustls-tls" ], version = "1.3.7" } 

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
