[package]
name = "harvest_translate"
version = "0.1.0"
edition = "2024"

[lib]
name = "harvest_translate"
path = "src/lib.rs"

[[bin]]
name = "translate"
path = "src/main.rs"

[dependencies]
clap.workspace = true 
config = { default-features = false, features = ["toml"], version = "0.15.18" }
directories = "6.0.0"
harvest_core.workspace = true 
libc = "0.2.177"
serde.workspace = true 
serde_json.workspace = true 
thiserror.workspace = true 
tracing.workspace = true
c_ast.workspace = true 
load_raw_source.workspace = true 
build_project_spec.workspace = true
modular_translation_llm.workspace = true
split_and_format.workspace = true
fix_build_check.workspace = true
diagnostic_attributor.workspace = true
fix_declarations_llm.workspace = true
try_cargo_build.workspace = true
raw_source_to_cargo_llm.workspace = true

[lints]
workspace = true
