[package]
name = "build_project_spec"
version = "0.1.0"
edition = "2024"

[dependencies]
full_source.workspace = true
harvest_core.workspace = true
load_raw_source.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true

[lints]
workspace = true
