[package]
name = "c_ast"
version = "0.1.0"
edition = "2024"

[dependencies]
clang-ast.workspace=true
full_source = { version = "0.1.0", path = "../full_source" }
harvest_core.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true 

[lints]
workspace = true
