[package]
name = "compilation_unit_to_rust_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
full_source.workspace = true
harvest_core.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
walkdir = "2"
tempfile.workspace = true

[lints]
workspace = true
