[package]
name = "emit_build_features"
version = "0.1.0"
edition = "2024"

[dependencies]
build_config.workspace = true
full_source.workspace = true
harvest_core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
