[package]
name = "fix_declarations_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
diagnostic_attributor.workspace = true
harvest_core.workspace = true
serde.workspace = true
serde_json.workspace = true
split_and_format.workspace = true
syn = { version = "2", features = ["full"] }
tracing.workspace = true

[lints]
workspace = true
