[package]
name = "modular_fix_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.23.1"
full_source.workspace = true
harvest_core.workspace = true
identify_project_kind.workspace = true
prettyplease = "0.2"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde.workspace = true
serde_json.workspace = true
syn = { version = "2", features = ["full"] }
tempfile.workspace = true
tracing.workspace = true

[lints]
workspace = true
