[package]
name = "modular_translation_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
c_ast.workspace = true
build_project_spec.workspace = true
full_source.workspace = true
harvest_core.workspace = true
serde.workspace = true 
serde_json.workspace = true
tracing.workspace = true 

[lints]
workspace = true
