[package]
name = "quantize_rust_spans"
version = "0.1.0"
edition = "2024"

[dependencies]
full_source.workspace = true
harvest_core.workspace = true
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn = { version = "2", features = ["full"] }
tracing.workspace = true

[lints]
workspace = true
