[package]
name = "raw_source_to_cargo_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
build_config.workspace = true
build_project_spec.workspace = true
full_source.workspace = true
harvest_core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
