[package]
name = "split_and_format"
version = "0.1.0"
edition = "2024"

[dependencies]
full_source.workspace = true
harvest_core.workspace = true
prettyplease = "0.2"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full"] }
tracing.workspace = true

[lints]
workspace = true
