[package]
name = "try_cargo_build"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.23.1"
full_source.workspace = true
harvest_core.workspace = true
serde_json.workspace = true
toml_edit = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
